quartz: add MOD2 to default accelerator mask

https://bugzilla.gnome.org/show_bug.cgi?id=736125